<resources>
    <string name="app_name">Zozima</string>
    <string name="database_name">zozima</string>
    <string name="errorInternet">Please check your internet connection.</string>
    <string name="please_wait">Please Wait</string>
    <string name="next">Next</string>
    <string name="permission_message">Allow Permissions</string>
    <string name="ok">Ok</string>
    <string name="comma">,</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="worest">WORST!</string>
    <string name="best">BEST!</string>
    <string name="getStarted">Get Started</string>
    <string name="signIn">Sign In</string>
    <string name="mobile_number">Enter your Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="tapSubmit">Tap Submit to verify your account. An SMS will be sent to verify your number.</string>
    <string name="errorMobile">Enter Valid Mobile Number</string>
    <string name="errorOtp">Enter Valid Verification Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="enterCode">Enter the Code that was send to</string>
    <string name="errorCode">Please type Correct Verification Code</string>
    <string name="countryCode">+91</string>
    <string name="resend">I didn\'t get a code. Resend</string>
    <string name="newVersion">We have updated our application. \nKindly update</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="plus"> + </string>
    <string name="rupaye"> ₹ </string>
    <string name="rupayeee">- ₹ </string>
    <string name="existAppMessage">Press Back again to Exit.</string>
    <string name="collections">Collection</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="addtocard">ADD TO CART</string>
    <string name="addanother"> ADD ANOTHER</string>
    <string name="startingFrom">Starting from</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading\t</string>
    <string name="facebook">Facebook</string>
    <string name="off">off</string>
    <string name="percent">%off</string>
    <string name="sharedd">Shared Catalog</string>
    <string name="sharee">SHARE ON OTHERS</string>
    <string name="shareNow">SHARE ON WHATSAPP </string>
    <string name="collections_for_you">Collections for YOU</string>
    <string name="mybank">My Bank Details</string>
    <string name="mypaytem">My Payments</string>
    <string name="settings">Settings</string>
    <string name="shared">My Shared Catalogs </string>
    <string name="refer">Refer &amp; Earn </string>
    <string name="notification">Notifications </string>
    <string name="help">Help </string>
    <string name="about">About Us </string>
    <string name="termscondtion">Terms &amp; Conditions</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy Policy</string>
    <string name="lunguage">Language</string>
    <string name="rate">Rate </string>
    <string name="ifsccode">IFSC CODE </string>
    <string name="sort">SORT</string>
    <string name="accountnumber">ACCOUNT NUMBER</string>
    <string name="newarrrivals">New Arrivels</string>
    <string name="filter">FILTERS</string>
    <string name="copy">Copy</string>
    <string name="coupons">COUPONS</string>
    <string name="get">You Save</string>
    <string name="upload_pic">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="give_permission">Give The Permission</string>
    <string name="remove_pic">Remove Image</string>
    <string name="showallcatlogfilter">Showing All Catalogs</string>
    <string name="sharenow">SHARE NOW</string>
    <string name="continuee">CONTINUE</string>
    <string name="others">Others</string>
    <string name="freeshippping">Free Shipping</string>
    <string name="shipping">Shipping</string>
    <string name="whislist">Wishlist</string>
    <string name="pricegst">Price inclusive of GST</string>
    <string name="dispatch">Dispatch in 8-10 Days</string>
    <string name="selectSize">SELECT SIZE</string>
    <string name="selectquantity">SELECT QUANTITY</string>
    <string name="checkabailbilty">CHECK AVAILBILITY</string>
    <string name="change">Change</string>
    <string name="enterpincode">Enter Delivery Pincode</string>
    <string name="ceckinterpincode"> Check Delivery Availability At Your Pincode</string>
    <string name="dispatchvalue">Dispatched in 2-3 Days</string>
    <string name="applycoupon">Apply Copuon</string>
    <string name="freecashondelivery">Free Cash On Delivery</string>
    <string name="dayseasyreturn">7 Days Easy Returns</string>
    <string name="lowestprice">Lowest Price Guarented</string>
    <string name="checkout">CHECKOUT</string>
    <string name="selectpaymentmethod">SELECT PAYMENT METHOD</string>
    <string name="empty">Your Cart is empty !</string>
    <string name="remove">Remove product from cart?</string>
    <string name="cancele">CANCEL</string>
    <string name="removee">REMOVE</string>
    <string name="copundiscount">Coupon Discount : </string>
    <string name="productdetail">PRODUCT DETAILS</string>
    <string name="shopnow">SHOP NOW</string>
    <string name="pricee">Price</string>
    <string name="coupondiscount">Coupon Discount</string>
    <string name="myorders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="total">Total</string>
    <string name="bestcopounforyou">BEST COUPONS FOR YOU</string>
    <string name="catalogseveddmsg">Catalog saved in your Wishlist</string>
    <string name="catalogremovemasg">Catalog removed from your Wishlist</string>
    <string name="pleasewait">Please Wait..</string>
    <string name="loadingimage">Loading Image...</string>
    <string name="sharingimage">Sharing Images...</string>
    <string name="imageDownload">Image Download</string>
    <string name="catlogeimagedownlod">Catalog\'s Images download</string>
    <string name="catlogedescription">Catalog\'s description</string>
    <string name="productaddwishlist">Product Add from Wishlist</string>
    <string name="productremovewishlist">Product Removed from Wishlist</string>
    <string name="confiemaccount">CONFIRM ACCOUNT NUMBER</string>
    <string name="editprofile">EDIT PROFILE</string>
    <string name="select">Select filter</string>
    <string name="qauntity">Quantity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bankDetails">My Bank details</string>
    <string name="cheack">Check Availability</string>
    <string name="selectt"> If you select \'Cash on Delivery\'-</string>
    <string name="online">Online</string>
    <string name="cashonedelivery">Cash On Delivery</string>
    <string name="productcharj">Product Charges</string>
    <string name="productdiscount">Product Discount</string>
    <string name="shippingcharges">Shipping Charges</string>
    <string name="cod">COD Charges</string>
    <string name="copoundiscount">Copoun Discount</string>
    <string name="order">Order Total</string>
    <string name="shippinaddres">SHIPPING ADDRESS</string>
    <string name="shiped">Shipped</string>
    <string name="deliverd">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="resturn">Return</string>
    <string name="addlanguage">Language</string>
    <string name="hindi">Hindi</string>
    <string name="selectYourCountry">Select Language</string>
    <string name="English">English</string>
    <string name="Productdetails">Product details</string>
    <string name="productdetails">Special PriceGet extra 5% off (price inclusive of discount)Bank
        Offer10% Instant Discount* with Axis Bank Credit
        and Debit Card Bank Offer10% off* with Axis Bank
        Buzz Credit CardT
     </string>
    <string name="bank"> Please enter your Correct bank details
     carefully.They will be used for all reunds,
     margins, and bonus payment</string>
    <string name="contacteditprofile">Your Contact Details are saves , Please fill your Bank Detail</string>
    <string name="question">Zozima collects cash from Customer (include your margin) at the time of delivery-After successful delivery,Zozima Transfer your margin sefely to your bank account  If you select You pay Zozima only the Order Total(without any margin)</string>
    <string name="selecttt"> If you select \'Online\'</string>
    <string name="selectttt"> -You pay Zozima only the order Total(Without any margin) -Zozima will not collect any cash from custmor-You can directly collect the final amount from customer (including you margin) via any other channel</string>
    <string name="Details">Material :poly-carbonateCaacity :300 mlDimension(L X B X H):
        It Has 6 Pieces of Multi PurposeUnbreakable Drinking Glass</string>
    <string name="oops">Oops! \n\n Seems like no product is in this Catalog right now.</string>
    <string name="helpp">Call supports timings are from 10am - 7pm \n\nBeware of fraudulent calls-Zozima will never call you asking for your bank/card details or otp</string>
    <string name="wishlist">It\'s quite empty here!</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="detailswishlist">You haven\'t saved any catalogs to wishlist! Just click Wishlist on catalogs to save them to wishlist and share them later with your customers</string>
    <string name="ddeliverypincode">Enter Delivery Pincode</string>
    <string name="placeorder">PLACE ORDER</string>
    <string name="id">ID: </string>
    <string name="margine">Margin Earned</string>
    <string name="Ordered">Ordered</string>
    <string name="phonenumber">PHONE NUMBER<font color='#FF0000'>*</font></string>
    <string name="pincode">PINCODE<font color='#FF0000'>*</font></string>
    <string name="city">CITY<font color='#FF0000'>*</font></string>
    <string name="state">STATE<font color='#FF0000'>*</font></string>
    <string name="price">Category</string>
    <string name="category">Price</string>
    <string name="brand">Discount</string>
    <string name="discount">Size</string>
    <string name="color">Color</string>
    <string name="string1">1</string>
    <string name="string2">2</string>
    <string name="string3">3</string>
    <string name="string4">4</string>
    <string name="string5">5</string>
    <string name="string6">6</string>
    <string name="days">If there is any issue with the product, you can raise a refund/Exchange request with 7 days of receiving order.
         \n\n\The product should be unused, undamaged and in original condition without any stain, scratches or holes.</string>
    <string name="supplier">Your cart contains products from "supplier name".  \n\n\Do you want to discard them and add products from "supplier name"  </string>
    <string name="required">This field is required</string>
    <string name="PhoneNumber">PHONE NUMBER</string>
    <string name="editsender">Edit Sender</string>
    <string name="name">Name</string>
    <string name="Submit">SUBMIT</string>
    <string name="pleaseenterdeliver">Please enter customer\'s Delivery pincode to check product  Availability</string>
    <string name="check">CHECK</string>
    <string name="sixdigitrequired">6 digits required!</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="contactus">Contact Us</string>
    <string name="call">Call us at 9935825142</string>
    <string name="helpemail">Email us at help@zozima.in</string>
    <string name="msg">Message</string>
</resources>