<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textSize="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/darkGrey"
        android:text="@string/mobile_number"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:gravity="center"
        />

    <code.view.CustomEditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:inputType="number"
        android:maxLength="10"
        android:gravity="center"
        android:background="@drawable/rectangle_white"
        android:elevation="@dimen/_5sdp"
        app:customFont="centurygothic.otf"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/darkGrey"
        android:text="@string/tapSubmit"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/rectangle_gradient_pink"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/white"
        />

</LinearLayout>
