<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="code.fragment.FeedBack">

    <RelativeLayout
        android:id="@+id/rlcontact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:elevation="@dimen/_4sdp">

        <ImageView
            android:id="@+id/ivback"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_11sdp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/lightgray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/fullname"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />


    <EditText
        android:id="@+id/etfullname"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />


    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"

        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/_12sdp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/msg"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />


    <EditText
        android:id="@+id/etmessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"

        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/_12sdp" />

    <code.view.CustomButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/rectangle_gradient_pink"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:customFont="CenturyGothicBold.ttf" />


</LinearLayout>
