<?xml version="1.0" encoding="utf-8"?>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="code.basic.CheckAvailabilityAcivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">
       <LinearLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

           <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/back" />
           <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/cheack"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:layout_height="@dimen/_30sdp" />


    </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/lightgray"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_height="160dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content">

            <TextView
                android:lineSpacingExtra="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/darkGrey"
                android:text="@string/pleaseenterdeliver"/>


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enterpincode"
            android:layout_width="wrap_content"
            android:ems="12"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/darkGrey"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:hint="@string/ddeliverypincode"/>

            <Button
                android:layout_width="@dimen/_80sdp"
                android:text="@string/check"
                android:layout_toRightOf="@+id/enterpincode"
                android:id="@+id/btncheck"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_height="@dimen/_35sdp" />
            <TextView
                android:visibility="gone"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_minus4sdp"
                android:text="@string/sixdigitrequired"
                android:layout_below="@+id/enterpincode"
                android:id="@+id/tvmsg"/>



</RelativeLayout>

    </androidx.cardview.widget.CardView>
<!--
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="@dimen/_45sdp">
    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OR SELECT AN ADDRESS"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp"
        />
</LinearLayout>
-->
</LinearLayout>
